--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -254,6 +254,44 @@
       year           = "1975",
 }
 
+@Article{kelly04,
+  title = "Simple parametrization of nucleon form factors",
+  author = "Kelly, J. J.",
+  journal = "Phys. Rev. C",
+  volume = "70",
+  number = "6",
+  pages = "068202",
+  numpages = "3",
+  year = "2004",
+  month = "Dec",
+  doi = "10.1103/PhysRevC.70.068202",
+  publisher = "American Physical Society"
+}
+
+@Article{arrington07,
+      author         = "Arrington, J. and Melnitchouk, W. and Tjon, J.A.",
+      title          = "{Global analysis of proton elastic form factor data with
+                        two-photon exchange corrections}",
+      journal        = "Phys.Rev.",
+      volume         = "C76",
+      pages          = "035205",
+      doi            = "10.1103/PhysRevC.76.035205",
+      year           = "2007",
+      eprint         = "0707.1861",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+}
+
+@Article{puckett10,
+      author         = "Puckett, A.J.R.",
+      title          = "Final Results of the GEp-III Experiment and the Status
+                        of the Proton Form Factors",
+      collaboration  = "GEp-III Collaboration",
+      year           = "2010",
+      eprint         = "1008.0855",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+}
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
@@ -538,6 +576,19 @@
       primaryClass   = "hep-ph",
 }
 
+@Article{block06,
+     author    = "Block, Martin M.",
+     title     = "Hadronic forward scattering: Predictions for the Large
+                  Hadron Collider and cosmic rays",
+     journal   = "Phys. Rept.",
+     volume    = "436",
+     year      = "2006",
+     pages     = "71-215",
+     eprint    = "hep-ph/0606215",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/j.physrep.2006.06.003",
+}
+
 @Article{kl07,
       author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
       title          = "To the theory of high-energy nucleon collisions",
@@ -805,4 +856,12 @@
   title = "An Introduction To Quantum Field Theory (Frontiers in Physics)",
   year = "1995",
   isbn = "0201503972"
+}
+
+@Book{barone,
+  author = "V. Barone and E. Preazzi",
+  publisher = "Springer",
+  title = "High-Energy Particle Diffraction",
+  year = "2002",
+  isbn = "3-540-42107-6"
 }
