--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -56,16 +56,16 @@
 
 \BeginText
 
-\input introduction.tex
+%\input introduction.tex
 \input elastic.tex
-\input totem.tex
-\input simu_reco.tex
-\input alignment.tex
-\input sigma_tot.tex
+%\input totem.tex
+%\input simu_reco.tex
+%\input alignment.tex
+%\input sigma_tot.tex
 
 \appendices
 
-\input appendices.tex
+%\input appendices.tex
 
 \references
 \PrintReferences
