--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -119,6 +119,16 @@
      SLACcitation  = "%%CITATION = ARXIV:0708.1156;%%"
 }
 
+@Article{islam09,
+      author         = "Islam, M.M. and Kaspar, J. and Luddy, R.J.",
+      title          = "{Deep-elastic p p scattering at LHC from low-x gluons}",
+      journal        = "Mod.Phys.Lett.",
+      volume         = "A24",
+      pages          = "485-496",
+      doi            = "10.1142/S0217732309030266",
+      year           = "2009",
+}
+
 @Article{wu70,
      author    = "Cheng, Hung and Wu, T. T.",
      title     = "Limit of Cross-Sections at Infinite Energy",
