--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -59,8 +59,8 @@
 %\input introduction.tex
 \input elastic.tex
 %\input totem.tex
-%\input simu_reco.tex
-%\input alignment.tex
+\input simu_reco.tex
+\input alignment.tex
 %\input sigma_tot.tex
 
 \appendices
